CDS should not handle disableEagerInitialization for archived lambda proxy classes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • b28

      During the review for JDK-8256487, there's the following comment:
      https://github.com/openjdk/jdk/pull/1301#issuecomment-730051148

      This change will also include not passing the "initialize" argument to the JVM_LookupLambdaProxyClassFromArchive function.

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Calvin Cheung (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: