8257241: CDS should not handle disableEagerInitialization for archived lambda proxy classes

Reviewed-by: iklam, redestad, mchung